Add t-SNE scatter plots

--- a/2 - Playtime.ipynb
+++ b/2 - Playtime.ipynb
@@ -431,26 +431,31 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Bag-of-Words Representation "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Both these feature matrices are arranged in 'User-first' order this means that each record/feature/row corresponds to a single user. Transpose these to obtain 'Game-first' features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 47,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-02T23:45:04.724212Z",
-     "start_time": "2019-01-02T23:45:04.624665Z"
-    }
+     "end_time": "2019-01-03T00:01:56.884219Z",
+     "start_time": "2019-01-03T00:01:56.787277Z"
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -473,14 +478,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Genre Information"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "The `game_info` dataframe contains genre information about each game in form of several columns comprising of a one-hot representation. We now need a categorical (string) representation of the genre which we can use to better visualize the data.\n",
     "\n",
@@ -494,7 +503,8 @@
     "ExecuteTime": {
      "end_time": "2019-01-02T23:46:43.323595Z",
      "start_time": "2019-01-02T23:46:43.063741Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -731,7 +741,8 @@
     "ExecuteTime": {
      "end_time": "2019-01-02T23:46:12.193942Z",
      "start_time": "2019-01-02T23:46:12.103588Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -746,7 +757,8 @@
     "ExecuteTime": {
      "end_time": "2019-01-02T23:46:48.823322Z",
      "start_time": "2019-01-02T23:46:48.593291Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -775,7 +787,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "The problem here is that the genres are not mutually exclusive for a given game. Each game can have more than one (upto 9, which is all of them) genres.\n",
     "\n",
@@ -789,7 +803,8 @@
     "ExecuteTime": {
      "end_time": "2019-01-02T23:47:22.283262Z",
      "start_time": "2019-01-02T23:47:22.213182Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -827,7 +842,8 @@
     "ExecuteTime": {
      "end_time": "2019-01-02T23:47:37.412166Z",
      "start_time": "2019-01-02T23:47:30.163230Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -953,7 +969,8 @@
     "ExecuteTime": {
      "end_time": "2019-01-02T23:49:19.202318Z",
      "start_time": "2019-01-02T23:49:08.877174Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1017,24 +1034,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 52,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-03T00:22:05.988847Z",
+     "start_time": "2019-01-03T00:22:05.947726Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "def reduce_dims(data):\n",
+    "    pca50 = PCA(n_components=50)\n",
+    "    intermediate = pca50.fit_transform(data)\n",
+    "    print(f'PCA explained variation: {np.sum(pca50.explained_variance_ratio_)}')\n",
+    "    \n",
+    "    tsne = TSNE(n_components=2)\n",
+    "    output = tsne.fit_transform(intermediate)\n",
+    "    print(f'KL Divergence after t-SNE: {tsne.kl_divergence_}')\n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-03T00:45:10.731549Z",
+     "start_time": "2019-01-03T00:45:09.538438Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "if os.path.exists(data_dir+'onehot_by_user_red.npy'):\n",
+    "    onehot_by_user_red = np.load(data_dir+'onehot_by_user_red.npy')\n",
+    "    time_by_user_red = np.load(data_dir+'time_by_user_red.npy')\n",
+    "    onehot_by_game_red = np.load(data_dir+'onehot_by_game_red.npy')\n",
+    "    time_by_game_red = np.load(data_dir+'time_by_game_red.npy')\n",
+    "else:\n",
+    "    onehot_by_user_red = reduce_dims(onehot_by_user)\n",
+    "    np.save(data_dir+'onehot_by_user_red', onehot_by_user_red)\n",
+    "    time_by_user_red = reduce_dims(time_by_user)\n",
+    "    np.save(data_dir+'time_by_user_red', time_by_user_red)\n",
+    "    onehot_by_game_red = reduce_dims(onehot_by_user.T)\n",
+    "    np.save(data_dir+'onehot_by_game_red', onehot_by_game_red)\n",
+    "    time_by_game_red = reduce_dims(time_by_user.T)\n",
+    "    np.save(data_dir+'time_by_game_red', time_by_game_red)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-01-03T00:51:07.184607Z",
+     "start_time": "2019-01-03T00:51:07.140615Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0], [0, 0]]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[[0,0],[0,0]]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2019-01-03T00:51:13.949Z"
+    }
+   },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "fig, ((ax1,ax2),(ax3,ax4)) = plt.subplots(nrows=2, ncols=2, figsize=(15,15), dpi=80)\n",
+    "ax1.scatter(onehot_by_user_red[:,0], onehot_by_user_red[:,1], alpha=0.5);\n",
+    "ax1.set_title('One-Hot features by User');\n",
+    "ax2.scatter(time_by_user_red[:,0], time_by_user_red[:,1], alpha=0.5);\n",
+    "ax2.set_title('Time-weighted features by User');\n",
+    "ax3.scatter(onehot_by_game_red[:,0], onehot_by_game_red[:,1], alpha=0.5);\n",
+    "ax3.set_title('One-Hot features by Game');\n",
+    "ax4.scatter(time_by_game_red[:,0], time_by_game_red[:,1], alpha=0.5);\n",
+    "ax4.set_title('Time-weighted  features by Game');"
+   ]
   },
   {
    "cell_type": "code",
