Add explanations in plotting section

--- a/2 - Playtime.ipynb
+++ b/2 - Playtime.ipynb
@@ -1033,6 +1033,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The very high dimensional feature vectors are projected into 2 dimensions for plotting. A combination of Principal Component Analysis and t-SNE Manifold projection is used for this. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {
@@ -1115,11 +1122,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The plots show interesting patterns and groupings in all variants of the data. Genre information can be plotted here to possibly shed some more light on these groups. These plots show that this data is a prime candidate for clustering. "
+   ]
   },
   {
    "cell_type": "code",
